--- a/vim/templates/py.template
+++ b/vim/templates/py.template
@@ -1,2 +1,12 @@
+#!/usr/bin/env python3
 
-print("hello world")
+def main():
+    pass
+
+
+if __name__ == '__main__':
+    try:
+        main()
+    except:
+        print ("Error")
+        sys.exit(0)
