added keyboard interrupt in python template

--- a/vim/templates/py.template
+++ b/vim/templates/py.template
@@ -7,6 +7,6 @@ def main():
 if __name__ == '__main__':
     try:
         main()
-    except:
-        print ("Error")
+    except KeyboardInterrupt:
+        print ("Interrupted")
         sys.exit(0)
