fixed powerline color in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,20 @@
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
+
 #enable vi mode in tmux
 set-window-option -g mode-keys vi
+
+#soften status bar color from harsh green to light grey
+set -g status-bg '#666666'
+set -g status-fg '#bbbbbb'
+
+#act like gnu screen
+unbind 	C-b
+set -g prefix C-a
